(lang dune 3.16)

(name komari)

(generate_opam_files true)

(source
 (github regularpoe/komari))

(authors "regularpoe")

(maintainers "regularpoe")

(license GPL-3.0)

(documentation https://github.com/regularpoe/komari)

(package
 (name komari)
 (synopsis "Basic schema to JSON")
 (description "Basic schema to JSON generator")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
